# bitcoin-key-generator

./: # Code Citations.md  .gitignore  ADVANCED_SIGNING_ROADMAP.md  ARCHITECTURE.md  BITCOIN_IMPLEMENTATION_STATUS.md  BITCOIN_SEND_COMPLETE.md  BITCOIN_SEND_TESTING.md  CUTTING_EDGE_ROADMAP.md  DELIVERY_SUMMARY.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  FINAL_ROADMAP.md  HAWALA_CUTTING_EDGE_ROADMAP.md  HAWALA_ROADMAP.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  KEYCHAIN_SYNC_SUMMARY.md  LAUNCH_READINESS_CHECKLIST.md  LAUNCH_ROADMAP.md  MASTER REVIEW.md  MILESTONE_0_PLAN.md  MILESTONE_1_PLAN.md  Makefile  NEXT_STEPS.md  ONBOARDING_IMPLEMENTATION_ROADMAP.md  PHASE_1_EXECUTION_PLAN.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START_SEND_BITCOIN.md  README.md  ROADMAP-14-TO-20-REVIEW.md  ROADMAP.md  ROADMAP_2.0.md  ROADMAP_ESSENTIALS.md  RUST_MIGRATION_ROADMAP.md  SECURITY_AUDIT.md  STATUS_REPORT.txt  TESTNET_BALANCE_FIX.md  VALIDATION_CHECKLIST.md  VALIDATION_QUICK_START.md  (+10 more)
rust-app/: Cargo.toml
rust-app/src/: algorand_wallet.rs  aptos_wallet.rs  balances.rs  bitcoin_cash_wallet.rs  bitcoin_wallet.rs  cardano_wallet.rs  cosmos_wallet.rs  dash_wallet.rs  dogecoin_wallet.rs  eos_wallet.rs  error.rs  ethereum_wallet.rs  ffi.rs  filecoin_wallet.rs  flow_wallet.rs  harmony_wallet.rs  hedera_wallet.rs  history.rs  internet_computer_wallet.rs  lib.rs  lib_old.rs  litecoin_wallet.rs  main.rs  mina_wallet.rs  monero_wallet.rs  multiversx_wallet.rs  near_wallet.rs  neo_wallet.rs  nervos_wallet.rs  oasis_wallet.rs  polkadot_wallet.rs  ravencoin_wallet.rs  serde_bytes.rs  solana_wallet.rs  staking.rs  stellar_wallet.rs  sui_wallet.rs  swap.rs  taproot_wallet.rs  tezos_wallet.rs  (+9 more)
rust-app/src/abi/: decoder.rs  encoder.rs  mod.rs  parser.rs  selector.rs  tests.rs  types.rs
rust-app/src/alerts/: manager.rs  mod.rs
rust-app/src/api/: mod.rs  providers.rs
rust-app/src/balances/: aggregator.rs  legacy.rs  mod.rs
rust-app/src/bridge/: aggregator.rs  layerzero.rs  mod.rs  stargate.rs  tests.rs  types.rs  wormhole.rs
rust-app/src/charts/: calculator.rs  coingecko.rs  mod.rs  tests.rs  types.rs
rust-app/src/cpfp/: builder.rs  calculator.rs  mod.rs  tests.rs  types.rs
rust-app/src/crypto/: mod.rs  schnorr.rs  taproot.rs
rust-app/src/crypto/curves/: ed25519.rs  mod.rs  secp256k1.rs  secp256r1.rs  sr25519.rs  traits.rs
rust-app/src/dex/: aggregator.rs  mod.rs  oneinch.rs  tests.rs  types.rs  zerox.rs
rust-app/src/eip712/: encoder.rs  hasher.rs  mod.rs  signer.rs  tests.rs  types.rs
rust-app/src/eip7702/: authorization.rs  mod.rs  signer.rs  tests.rs  transaction.rs  types.rs
rust-app/src/erc4337/: account.rs  bundler.rs  gas_account.rs  mod.rs  paymaster.rs  user_operation.rs
rust-app/src/fees/: estimator.rs  intelligence.rs  mod.rs
rust-app/src/history/: fetcher.rs  mod.rs
rust-app/src/ibc/: channels.rs  client.rs  mod.rs  tests.rs  transfer.rs  types.rs
rust-app/src/lightning/: invoice.rs  lnurl.rs  mod.rs  tests.rs  types.rs
rust-app/src/message_signer/: cosmos.rs  ethereum.rs  mod.rs  solana.rs  tezos.rs
rust-app/src/notes/: manager.rs  mod.rs
rust-app/src/offramp/: mod.rs  service.rs
rust-app/src/onramp/: mod.rs  moonpay.rs  ramp.rs  tests.rs  transak.rs  types.rs
rust-app/src/ordinals/: indexer.rs  mod.rs  parser.rs  tests.rs  types.rs
rust-app/src/payments/: links.rs  mod.rs
rust-app/src/qr/: decoder.rs  encoder.rs  fountain.rs  mod.rs  types.rs  ur.rs
rust-app/src/security/: approvals.rs  key_rotation.rs  mod.rs  phishing.rs  secure_memory.rs  shamir.rs  simulation.rs  threat_detection.rs  tx_policy.rs  verification.rs  whitelist.rs
rust-app/src/signing/: compiler.rs  mod.rs
rust-app/src/tx/: broadcaster.rs  builder.rs  cancellation.rs  mod.rs  replay_protection.rs  signer.rs  tracker.rs
rust-app/src/utils/: audit.rs  backup_encryption.rs  cache.rs  crypto.rs  http.rs  json.rs  logging.rs  mod.rs  network_config.rs  rate_limiter.rs  sanitize.rs  security_config.rs  session.rs
rust-app/src/wallet/: address_validation.rs  amount_validation.rs  derivation.rs  derivation_path.rs  keygen.rs  mod.rs  nonce.rs  utxo.rs  validation.rs
rust-app/tests/: cli_integration.rs  property.rs  security_integration.rs
(+449 files in other folders)
