[package]
name = "rust-app"
version = "0.1.0"
edition = "2024"
default-run = "rust-app"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
libc = "0.2"
bitcoin = "0.32"
hex = "0.4"
rand = "0.8"
tiny-keccak = { version = "2.0", features = ["keccak"] }
bs58 = "0.4"
bech32 = "0.9"
ed25519-dalek = { version = "2", features = ["std"] }
curve25519-dalek = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
ethers-core = "2.0"
ethers-signers = "2.0"
bip39 = "2.0"
sha2 = "0.10"



[dev-dependencies]
assert_cmd = "2"
proptest = "1"
